--- a/anchorwaveplots.Rmd
+++ b/anchorwaveplots.Rmd
@@ -11,21 +11,21 @@ library(cowplot)
 #library(ggpubr)
 library(grid)
 library(gridExtra)
-
-pubTheme <-theme(title = element_text(size=10), #usually 14
-        text = element_text(size=8),
-        plot.background = element_rect(fill="lightgrey"),
-        strip.background = element_rect(linetype=0,linewidth=8,
-                                        fill="grey"), #facet boxes
-        strip.text = element_text(size=10), #usually 11
-        legend.background = element_rect(fill="grey"),
-        legend.text = element_text(size=8),
-        legend.title = element_text(size=10),
-        panel.background = element_rect(fill="#FFFFFF"), #plot body
-        panel.grid = element_blank() #plot body pt2
-  )
-pubColours <- c("#2d9da6","#99b700","#8a53b6","#bf4824","#152944")
-anchors <- read_table("anchors",comment="#")
+# 
+# pubTheme <-theme(title = element_text(size=10), #usually 14
+#         text = element_text(size=8),
+#         plot.background = element_rect(fill="lightgrey"),
+#         strip.background = element_rect(linetype=0,linewidth=8,
+#                                         fill="grey"), #facet boxes
+#         strip.text = element_text(size=10), #usually 11
+#         legend.background = element_rect(fill="grey"),
+#         legend.text = element_text(size=8),
+#         legend.title = element_text(size=10),
+#         panel.background = element_rect(fill="#FFFFFF"), #plot body
+#         panel.grid = element_blank() #plot body pt2
+#   )
+# pubColours <- c("#2d9da6","#99b700","#8a53b6","#bf4824","#152944")
+anchors <- read_table("data/anchors",comment="#")
 # select only autosomes and sex chromosomes
 anchors_clean<- anchors %>% filter(queryChr == "A1" | 
                                      queryChr== "A2"|
@@ -48,7 +48,7 @@ anchors_mut <- anchors_clean %>% #mutate(newstart = ifelse(queryChr == "Y1",(que
   mutate(newChr = ifelse(queryChr == "Y1"| queryChr == "Y2","Y", queryChr))
 
 anchors_mb<- anchors_mut %>% mutate(queryMb = queryStart/1e6) %>% mutate(referenceMb = referenceStart/1e6)
-
+write_delim(anchors_mb,"data/anchors_mb.txt")
 
 ```
 
@@ -91,6 +91,25 @@ y<-anchors_mb %>% filter(newChr=="Y") %>%
                      values = pubColours[c(1,4)])
   
 y
+z<-anchors_mb %>% filter(newChr=="Y") %>%
+  mutate(newstartMb=(max(queryMb) - queryMb)) %>%
+  ggplot(aes(newstartMb,referenceMb)) + 
+  geom_point(aes(color=queryChr)) + 
+  geom_vline(xintercept = 71,linetype = 'dashed') +
+  geom_vline(xintercept = 261,linetype = 'dashed') +
+  geom_vline(xintercept = 367,linetype = 'dashed') +
+  annotate("text", x = .35*(71), y = 400, label = "PAR1",size=5) +
+  annotate("text", x = .5*(71+261), y = 400, label = "Old sex-linked\n region",size =5) +
+  annotate("text", x = .5*(261+367), y = 400, label = "New\n sex-linked\n region",size=5) +
+  annotate("text", x = .5*(367+500), y = 400, label = "PAR2",size=5) +
+  ylim(0,430) +
+  theme_classic() +
+  theme(legend.position = c(0.9,0.3),axis.title=element_blank()) +
+  scale_color_manual(name="",
+                    labels=c("Y1","Y2"),
+                     values = pubColours[c(1,4)])
+y
+z
 myplot<-plot_grid(a1,a2,a4,y, labels = c(" A1",
                                  " A2",
                                  " A4",
@@ -105,7 +124,7 @@ x.grob <- textGrob("Paternal Haplotype\nposition(Mb)",gp=gpar(fontface="bold", f
 #add to plot
 labeledplot<-grid.arrange(arrangeGrob(myplot, left = y.grob, bottom = x.grob))
 # save as tiff (raster, lossless, good for publication apparently?)
-ggsave(plot=labeledplot,"draft4_dotplot.tiff",width=14,height=10,dpi="print",device="tiff")
+#ggsave(plot=labeledplot,"draft4_dotplot.tiff",width=14,height=10,dpi="print",device="tiff")
 ```
 
 
